fix: projects page menu bar shifted due to carousel

--- a/src/pages/projects/styles/carousel.css
+++ b/src/pages/projects/styles/carousel.css
@@ -9,6 +9,10 @@
   height:340px;
 }
 
+*, ::before, ::after {
+    box-sizing: content-box;
+}
+
 .image{
   width: 600px;
   height:370px;
